# wender

./: .gitignore  Cargo.toml  build.rs
crates/mca2vox/: Cargo.toml
crates/mca2vox/src/: main.rs
crates/wesl/: Cargo.toml
crates/wesl/src/: main.rs
doc/: calc.ods
script/mca2vox/: Cargo.toml
script/mca2vox/src/: main.rs
src/: bindings.wgsl  camera.rs  compute.wgsl  compute_octree.wgsl  conetrace.wgsl  fallback.wgsl  lib.rs  lights.rs  main.rs  mipmap.wgsl  octree.wgsl  preproc.rs  rt.wgsl  shader.wgsl  ui.rs  util.wgsl  voxels.rs  wgpu_util.rs
src/raycast/: dvo.wgsl  grid.wgsl  raycast.wgsl  svo.wgsl  util.wgsl
wgsl_preproc/: Cargo.toml
wgsl_preproc/src/: main.rs
