[workspace]
members = ["crates/mca2vox"]
exclude = ["crates/naga_oil_cli"]

[package]
name = "wender"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.29"
env_logger = "0.10"
log = "0.4"
wgpu = { version = "0.20", features = ["naga-ir"] }
pollster = "0.3"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
rand = "0.8.5"
egui = "0.28.1"
egui-wgpu = { version = "0.28.0", features = ["winit"] }
egui-winit = "0.28.0"
egui_plot = "0.28.0"
rayon = "1.8.0"
itertools = "0.12.0"
dot_vox = "5.1.1"
nalgebra = "0.32.3"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
regex = "1.10.2"
clap = "4.4.18"
bincode = "1.3.3"
thiserror = "1.0.63"
naga_oil = "0.14.0"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
# console_log = "1.0"
# wgpu = { version = "0.18" }
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
# web-sys = { version = "0.3", features = [
#     "Document",
#     "Window",
#     "Element",
#     "GpuComputePassTimestampWrite"
# ]}

[features]
default = []
byte_voxels = []

[[bin]]
name = "wender"
path = "src/main.rs"

[patch.crates-io]
naga_oil = { path = "crates/naga_oil" }
# patched for https://github.com/emilk/egui/pull/4847
# update wgpu to 22.0.0
# naga_oil = { git = "https://github.com/callym/naga_oil", branch = "wgpu-22" }
# egui = { git = "https://github.com/emilk/egui" }
# egui-winit = { git = "https://github.com/emilk/egui" }
# egui-wgpu = { git = "https://github.com/emilk/egui" }
# egui_plot = { git = "https://github.com/emilk/egui_plot" }
