[package]
name = "mca2vox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dot_vox = "5.1.1"
fastanvil = "0.30.0"
image = "0.24.8"
itertools = "0.12.0"
palette = "0.7.3"
